<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="profilMB"
            type="com.exomatik.balligh.balligh.data.model.ModelBiodataMuballigh" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/customToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/putihBiruGelap2">
            <ImageButton
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_standard_big"
                android:background="@drawable/border_circle_transparent_gray"
                android:src="@drawable/icon_back" />

            <TextView
                android:id="@+id/text_header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25.0dip"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:text="@string/text_profil_muballigh"
                android:textAlignment="center"
                android:textColor="@color/putihAsli"
                android:textSize="@dimen/text_big"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_standard_big"
                android:background="@drawable/border_circle_transparent_gray"
                android:src="@drawable/icon_edit_white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:background="@drawable/radius_bottom_gradient_mb"
            android:layout_marginLeft="@dimen/width_mines_header"
            android:layout_marginRight="@dimen/width_mines_header">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/width40"
                android:id="@+id/btnPesan"
                android:visibility="gone"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_user"
                android:layout_width="@dimen/width150"
                android:layout_height="@dimen/width150"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/width40"
                android:layout_marginBottom="@dimen/width40" />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/width40"
                android:layout_height="@dimen/width40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/width40"
                android:id="@+id/btnTelfon"
                android:visibility="gone"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:layout_marginTop="@dimen/width30"
            >

            <TextView
                android:id="@+id/text_nama"
                android:text="@{profilMB.id}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_regular"
                android:textAllCaps="true"
                android:textColor="@color/putihAsli"
                android:textSize="@dimen/text_standard_big"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/text_gelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_nama"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/putihGelap6"
                android:textSize="@dimen/text_small" />

            <RelativeLayout
                android:id="@+id/rl_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_gelar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_standard"
                >

                <ImageView
                    android:id="@+id/img_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginTop="@dimen/margin_mines_very_small"
                    android:src="@drawable/icon_alamat" />

                <TextView
                    android:text="@{profilMB.alamat}"
                    android:id="@+id/text_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/img_location"
                    android:fontFamily="@font/roboto_regular"
                    android:textAlignment="center"
                    android:textColor="@color/putihAsli"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/text_kualifikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_alamat"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/width30"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/text_kualifikasi_ilmu"
                android:textAllCaps="true"
                android:textColor="@color/putihGelap6"
                android:textSize="@dimen/text_standard_et"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_isi_kualifikasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_kualifikasi"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="3"
                android:textAlignment="center"
                android:textColor="@color/putihAsli"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/text_kesediaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_isi_kualifikasi"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="@dimen/width30"
                android:text="@string/text_kualifikasi_tabligh"
                android:textAllCaps="true"
                android:textColor="@color/putihGelap6"
                android:textSize="@dimen/text_standard_et"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_isi_kesediaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_kesediaan"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/roboto_regular"
                android:maxLines="3"
                android:textAlignment="center"
                android:textColor="@color/putihAsli"
                android:textSize="@dimen/text_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_big"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/width150"
            android:layout_marginTop="@dimen/margin_standard"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</layout>